force-app/main/default/objects/Product_Charge__c.object
<CustomObject>
    <description>This object contains a lookup to product and this object stores charge information of Products</description>
    <fields>
        <fullName>ATM_Fee_in_other_currencies__c</fullName>
        <description>The percentage of ATM Fee in other currencies</description>
        <inlineHelpText>Enter the ATM Fee for the product in the legal country!</inlineHelpText>
        <label>ATM Fee in other currencies</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Replacement_Cost__c</fullName>
        <description>The Card Replacement Cost in different countries</description>
        <label>Card Replacement Cost</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_per_Calendar_Month__c</fullName>
        <description>This field contains the Cost per Calendar Month of Mastercards if applicable.</description>
        <inlineHelpText>Enter the Cost per Calendar Month for the product in the legal country!</inlineHelpText>
        <label>Cost per Calendar Month</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Country__c</fullName>
        <description>This picklist has all possible legal countries to select while storing product charges.</description>
        <label>Legal Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegalCountryList</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup field for the product.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Charges</relationshipLabel>
        <relationshipName>Product_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Charge</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllCharges</fullName>
        <columns>Product__c</columns>
        <columns>Legal_Country__c</columns>
        <columns>Card_Replacement_Cost__c</columns>
        <columns>ATM_Fee_in_other_currencies__c</columns>
        <columns>Cost_per_Calendar_Month__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Product_Charge__c.Mastercard</value>
        </filters>
        <label>AllCharges</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{0}</displayFormat>
        <label>Product Charge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Charges</pluralLabel>
    <recordTypes>
        <fullName>Mastercard</fullName>
        <active>true</active>
        <description>This record type is specifically for credit/ debit mastercards</description>
        <label>Mastercard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>